--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <script>
     function showContent(num) {
       const content = {
-        1: '<b>Назва курсу:</b> The Complete Full-Stack Web Development Bootcamp<br><b>Посилання:</b> <a href="https://ua.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12638830#overview"</a>',
-        2: '<b>Посилання на репозиторій:</b> <a href="https://github.com/Lepseich/front_courses"</a>',
+        1: '<b>Назва курсу:</b> The Complete Full-Stack Web Development Bootcamp<br><b>Посилання:</b> <a href="https://ua.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12638830#overview">Тут</a>',
+        2: '<b>Посилання на репозиторій:</b> <a href="https://github.com/Lepseich/front_courses">Тут</a>',
         3: '<b>Сертифікат з балами: <br> <img src="img/cert.jpg" > <a href="https://ua.udemy.com/certificate/UC-fb943b4c-e9a3-4e6b-b66c-584c6867c4bc/">Посилання</a> </b>',
         4: '<b>Зміст курсу:</b><br>1. HTML/CSS<br>2. JavaScript<br>3. Backend (Node.js)<br>4. API інтеграції<br>5. React.js',
         5: '<b>Тестування:</b><br>Успішно здано 5 тестів з 5-ти <br> <img src="img/quiz1.jpg" alt=""> <br> <img src="img/quiz2.jpg" alt=""> <br> <img src="img/quiz3.jpg" alt=""> <br> <img src="img/quiz4.jpg" alt=""> <br> <img src="img/quiz5.jpg" alt="">' ,
